--- a/css/kalium.css
+++ b/css/kalium.css
@@ -1075,7 +1075,7 @@ body {
   font-family: 'Roboto Slab', "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-size: 14px;
   line-height: 1.42857143;
-  color: #333333;
+  color: #000000;
   background-color: #fff;
 }
 input,
@@ -1087,12 +1087,12 @@ textarea {
   line-height: inherit;
 }
 a {
-  color: #000;
+  color: #FF4600;
   text-decoration: none;
 }
 a:hover,
 a:focus {
-  color: #000000;
+  color: #b33100;
   text-decoration: underline;
 }
 a:focus {
@@ -1328,11 +1328,11 @@ mark,
   color: #777777;
 }
 .text-primary {
-  color: #000;
+  color: #FF4600;
 }
 a.text-primary:hover,
 a.text-primary:focus {
-  color: #000000;
+  color: #cc3800;
 }
 .text-success {
   color: #3c763d;
@@ -1364,11 +1364,11 @@ a.text-danger:focus {
 }
 .bg-primary {
   color: #fff;
-  background-color: #000;
+  background-color: #FF4600;
 }
 a.bg-primary:hover,
 a.bg-primary:focus {
-  background-color: #000000;
+  background-color: #cc3800;
 }
 .bg-success {
   background-color: #dff0d8;
@@ -1553,7 +1553,7 @@ pre {
   line-height: 1.42857143;
   word-break: break-all;
   word-wrap: break-word;
-  color: #333333;
+  color: #000000;
   background-color: #f5f5f5;
   border: 1px solid #ccc;
   border-radius: 2px;
@@ -2490,7 +2490,7 @@ legend {
   margin-bottom: 20px;
   font-size: 21px;
   line-height: inherit;
-  color: #333333;
+  color: #000000;
   border: 0;
   border-bottom: 1px solid #e5e5e5;
 }
@@ -2896,7 +2896,7 @@ select[multiple].input-lg {
   display: block;
   margin-top: 5px;
   margin-bottom: 10px;
-  color: #737373;
+  color: #404040;
 }
 @media (min-width: 768px) {
   .form-inline .form-group {
@@ -3110,26 +3110,26 @@ fieldset[disabled] .btn-default.active {
 }
 .btn-primary {
   color: #fff;
-  background-color: #000;
-  border-color: #000000;
+  background-color: #FF4600;
+  border-color: #e63f00;
 }
 .btn-primary:focus,
 .btn-primary.focus {
   color: #fff;
-  background-color: #000000;
-  border-color: #000000;
+  background-color: #cc3800;
+  border-color: #661c00;
 }
 .btn-primary:hover {
   color: #fff;
-  background-color: #000000;
-  border-color: #000000;
+  background-color: #cc3800;
+  border-color: #a82e00;
 }
 .btn-primary:active,
 .btn-primary.active,
 .open > .dropdown-toggle.btn-primary {
   color: #fff;
-  background-color: #000000;
-  border-color: #000000;
+  background-color: #cc3800;
+  border-color: #a82e00;
 }
 .btn-primary:active:hover,
 .btn-primary.active:hover,
@@ -3141,8 +3141,8 @@ fieldset[disabled] .btn-default.active {
 .btn-primary.active.focus,
 .open > .dropdown-toggle.btn-primary.focus {
   color: #fff;
-  background-color: #000000;
-  border-color: #000000;
+  background-color: #a82e00;
+  border-color: #661c00;
 }
 .btn-primary:active,
 .btn-primary.active,
@@ -3167,11 +3167,11 @@ fieldset[disabled] .btn-primary:active,
 .btn-primary.disabled.active,
 .btn-primary[disabled].active,
 fieldset[disabled] .btn-primary.active {
-  background-color: #000;
-  border-color: #000000;
+  background-color: #FF4600;
+  border-color: #e63f00;
 }
 .btn-primary .badge {
-  color: #000;
+  color: #FF4600;
   background-color: #fff;
 }
 .btn-success {
@@ -3439,7 +3439,7 @@ fieldset[disabled] .btn-danger.active {
   background-color: #fff;
 }
 .btn-link {
-  color: #000;
+  color: #FF4600;
   font-weight: normal;
   border-radius: 0;
 }
@@ -3460,7 +3460,7 @@ fieldset[disabled] .btn-link {
 }
 .btn-link:hover,
 .btn-link:focus {
-  color: #000000;
+  color: #b33100;
   text-decoration: underline;
   background-color: transparent;
 }
@@ -3591,13 +3591,13 @@ tbody.collapse.in {
   clear: both;
   font-weight: normal;
   line-height: 1.42857143;
-  color: #333333;
+  color: #000000;
   white-space: nowrap;
 }
 .dropdown-menu > li > a:hover,
 .dropdown-menu > li > a:focus {
   text-decoration: none;
-  color: #262626;
+  color: #000000;
   background-color: #f5f5f5;
 }
 .dropdown-menu > .active > a,
@@ -3606,7 +3606,7 @@ tbody.collapse.in {
   color: #fff;
   text-decoration: none;
   outline: 0;
-  background-color: #000;
+  background-color: #FF4600;
 }
 .dropdown-menu > .disabled > a,
 .dropdown-menu > .disabled > a:hover,
@@ -4035,7 +4035,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
 .nav .open > a:hover,
 .nav .open > a:focus {
   background-color: #eeeeee;
-  border-color: #000;
+  border-color: #FF4600;
 }
 .nav .nav-divider {
   height: 1px;
@@ -4128,7 +4128,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
 .nav-pills > li.active > a:hover,
 .nav-pills > li.active > a:focus {
   color: #fff;
-  background-color: #000;
+  background-color: #FF4600;
 }
 .nav-stacked > li {
   float: none;
@@ -4752,7 +4752,7 @@ fieldset[disabled] .navbar-inverse .btn-link:focus {
   padding: 6px 12px;
   line-height: 1.42857143;
   text-decoration: none;
-  color: #000;
+  color: #FF4600;
   background-color: #fff;
   border: 1px solid #ddd;
   margin-left: -1px;
@@ -4773,7 +4773,7 @@ fieldset[disabled] .navbar-inverse .btn-link:focus {
 .pagination > li > a:focus,
 .pagination > li > span:focus {
   z-index: 3;
-  color: #000000;
+  color: #b33100;
   background-color: #eeeeee;
   border-color: #ddd;
 }
@@ -4785,8 +4785,8 @@ fieldset[disabled] .navbar-inverse .btn-link:focus {
 .pagination > .active > span:focus {
   z-index: 2;
   color: #fff;
-  background-color: #000;
-  border-color: #000;
+  background-color: #FF4600;
+  border-color: #FF4600;
   cursor: default;
 }
 .pagination > .disabled > span,
@@ -4903,11 +4903,11 @@ a.label:focus {
   background-color: #5e5e5e;
 }
 .label-primary {
-  background-color: #000;
+  background-color: #FF4600;
 }
 .label-primary[href]:hover,
 .label-primary[href]:focus {
-  background-color: #000000;
+  background-color: #cc3800;
 }
 .label-success {
   background-color: #5cb85c;
@@ -4971,7 +4971,7 @@ a.badge:focus {
 }
 .list-group-item.active > .badge,
 .nav-pills > .active > a > .badge {
-  color: #000;
+  color: #FF4600;
   background-color: #fff;
 }
 .list-group-item > .badge {
@@ -5044,11 +5044,11 @@ a.badge:focus {
 a.thumbnail:hover,
 a.thumbnail:focus,
 a.thumbnail.active {
-  border-color: #000;
+  border-color: #FF4600;
 }
 .thumbnail .caption {
   padding: 9px;
-  color: #333333;
+  color: #000000;
 }
 .alert {
   padding: 15px;
@@ -5158,7 +5158,7 @@ a.thumbnail.active {
   line-height: 20px;
   color: #fff;
   text-align: center;
-  background-color: #000;
+  background-color: #FF4600;
   -webkit-box-shadow: inset 0 -1px 0 rgba(0, 0, 0, 0.15);
   box-shadow: inset 0 -1px 0 rgba(0, 0, 0, 0.15);
   -webkit-transition: width 0.6s ease;
@@ -5321,8 +5321,8 @@ button.list-group-item {
 .list-group-item.active:focus {
   z-index: 2;
   color: #fff;
-  background-color: #000;
-  border-color: #000;
+  background-color: #FF4600;
+  border-color: #FF4600;
 }
 .list-group-item.active .list-group-item-heading,
 .list-group-item.active:hover .list-group-item-heading,
@@ -5338,7 +5338,7 @@ button.list-group-item {
 .list-group-item.active .list-group-item-text,
 .list-group-item.active:hover .list-group-item-text,
 .list-group-item.active:focus .list-group-item-text {
-  color: #666666;
+  color: #ffdacc;
 }
 .list-group-item-success {
   color: #3c763d;
@@ -5703,7 +5703,7 @@ button.list-group-item-danger.active:focus {
   border-color: #ddd;
 }
 .panel-default > .panel-heading {
-  color: #333333;
+  color: #000000;
   background-color: #f5f5f5;
   border-color: #ddd;
 }
@@ -5712,28 +5712,28 @@ button.list-group-item-danger.active:focus {
 }
 .panel-default > .panel-heading .badge {
   color: #f5f5f5;
-  background-color: #333333;
+  background-color: #000000;
 }
 .panel-default > .panel-footer + .panel-collapse > .panel-body {
   border-bottom-color: #ddd;
 }
 .panel-primary {
-  border-color: #000;
+  border-color: #FF4600;
 }
 .panel-primary > .panel-heading {
   color: #fff;
-  background-color: #000;
-  border-color: #000;
+  background-color: #FF4600;
+  border-color: #FF4600;
 }
 .panel-primary > .panel-heading + .panel-collapse > .panel-body {
-  border-top-color: #000;
+  border-top-color: #FF4600;
 }
 .panel-primary > .panel-heading .badge {
-  color: #000;
+  color: #FF4600;
   background-color: #fff;
 }
 .panel-primary > .panel-footer + .panel-collapse > .panel-body {
-  border-bottom-color: #000;
+  border-bottom-color: #FF4600;
 }
 .panel-success {
   border-color: #d6e9c6;
@@ -6785,20 +6785,23 @@ h1 {
   z-index: -1;
   left: 0;
   right: 0;
-  background: #000;
+  background: #FF4600;
   height: 440px;
 }
-.brand .logo {
-  width: 50%;
+.logo {
+  background: #fff;
   position: absolute;
-  right: 0;
-  bottom: 0;
   top: 0;
+  bottom: 0;
+  right: -64px;
+  line-height: 64px;
+  width: 64px;
   text-align: center;
 }
 .download {
   background: rgba(255, 255, 255, 0.8);
   position: -webkit-sticky;
+  position: sticky;
   top: 0px;
   margin: 0 -15px;
   padding: 15px;
