--- a/less/kalium.less
+++ b/less/kalium.less
@@ -3,7 +3,7 @@
 @import url(https://fonts.googleapis.com/css?family=Roboto+Slab:100,400,700|Roboto+Mono);
 
 @font-family-sans-serif: 'Roboto Slab', "Helvetica Neue", Helvetica, Arial, sans-serif;
-
+@font-family-monospace:   'Roboto Mono', Menlo, Monaco, Consolas, "Courier New", monospace;
 
 @headings-font-weight:  100;
 @headings-line-height: @line-height-base;
@@ -13,7 +13,6 @@
 
 @brand-primary: #FF4600;
 
-
 @gray-base:              #000;
 @gray-darker:            lighten(@gray-base, 13.5%); // #222
 @gray-dark:              rgba(0,0,0,84);
@@ -21,11 +20,6 @@
 @gray-light:             lighten(@gray-base, 46.7%); // #777
 @gray-lighter:           lighten(@gray-base, 93.5%); // #eee
 
-
-
-pre{
-  font-family: 'Roboto Mono', monospace; 
-}
 
 body{
   font-weight: 400;
@@ -46,14 +40,22 @@ h1{
 }
 
 body:before{
+    @media (min-width: @screen-sm-min) { 
+
   content: ".";
   text-indent: -9999;
   position: fixed;
   z-index: -1;
   left: 0;
-  right: 0;  
+  right: 0;
+  bottom: 0;
+  top: 0;
   background: @brand-primary;
-  height: 440px;
+  background-image: url(../img/photo-1440688807730-73e4e2169fb8.jpg);
+  background-image:  url(../img/bg.jpg);
+    background-size: cover;
+//  height: 440px;
+}
 }
 
 .logo{
